# University

./: README.md
Advanced Programming/: README.md
Advanced Programming/Tarea 0/: Tarea0.rar
Advanced Programming/Tarea 0/Tarea0/: Program (Jm-PC's conflicted copy 2014-08-20).fs  Program.fs  Tarea0.fsproj  Tarea0.sln
Advanced Programming/Tarea 1/: Anti Aereo.cs  Anti Infanteria.cs  Arquero.cs  Avion-Anti Aereo.cs  Bombardero.cs  Desmoralizador.cs  Equipo.cs  Groupie.cs  Guerrero.cs  Ingeniero.cs  Kamikaze.cs  Medico.cs  MiRandom.cs  Program.cs  ReadMe.txt  Tarea 1.csproj  Tarea 1.sln  Unidades.cs  base.cs
Advanced Programming/Tarea 1/Properties/: AssemblyInfo.cs
Advanced Programming/Tarea 2/: ReadMe.txt
Advanced Programming/Tarea 2/Tarea2/: CreadorWav.cs  Data.cs  EscrituraXML.cs  Explorador de Archivos.cs  Partitura.cs  Program.cs
Advanced Programming/Tarea 3/Tarea 3/: LibreriaT3.xml  Lista.cs  Program.cs
Advanced Programming/Tarea 4/: Tarea 4.sln  ojooo.txt
Advanced Programming/Tarea 4/Backend/: Backend.csproj  Bloques.cs  Mapa.cs  Worm.cs
Advanced Programming/Tarea 4/Tarea 4/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Misil.xaml  Misil.xaml.cs  Tarea 4.csproj  Window1.xaml  Window1.xaml.cs  Worms.xaml  Worms.xaml.cs
Advanced Programming/Tarea 5/: ReadMe.txt  Tarea 5.sln
Advanced Programming/Tarea 5/Backend/: Backend.csproj  Ermitaño.cs  Logica.cs  Mapa.cs  Soldado Logica.cs
Advanced Programming/Tarea 5/Tarea 5/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Soldado.xaml  Soldado.xaml.cs  Tarea 5.csproj  UserControl1.xaml  UserControl1.xaml.cs
Advanced Programming/Tarea 6/: Output-Debug.txt  Tarea 6.sln
Advanced Programming/Tarea 6/Backend/: Backend Logica.cs  Backend.csproj  Cliente.cs  Jugador.cs  Mapa.cs  Servidor.cs
Advanced Programming/Tarea 7/: Tarea 7.sln
Data Structure and Algorithms/: README.md
Data Structure and Algorithms/Tarea01/: CMakeLists.txt
Data Structure and Algorithms/Tarea01/Programa/: Makefile
Data Structure and Algorithms/Tarea01/Programa/src/common/: city.c  city.h  city_io.c  color.c  color.h
Data Structure and Algorithms/Tarea01/Programa/src/judge/: checker.c  checker.h  judge.c  reader.c  reader.h
Data Structure and Algorithms/Tarea01/Programa/src/solver/: solver.c  stack.c  stack.h
Data Structure and Algorithms/Tarea01/Programa/src/watcher/: .clang_complete  drawer.c  drawer.h  watcher.c
Data Structure and Algorithms/Tarea01/Programa/tests/easy/: 1x1.txt  2x1.txt  3x3.txt  sol.txt
Data Structure and Algorithms/Tarea01/Programa/tests/hard/: 7x7.txt  arena.txt  land_protector.txt  runbow.txt
Data Structure and Algorithms/Tarea01/Programa/tests/lunatic/: crop_circles.txt  field.txt  patchwork.txt  stars.txt
Data Structure and Algorithms/Tarea01/Programa/tests/normal/: 5x5.txt  citadel.txt  city_n.txt  tie.txt
Data Structure and Algorithms/Tarea02/: CMakeLists.txt
Data Structure and Algorithms/Tarea02/Programa/: Makefile
Data Structure and Algorithms/Tarea02/Programa/assets/materials/: billiard.mtl  candy.mtl  cornellbox.mtl  dragon.mtl  lucy.mtl  magic.mtl  metal.mtl  sponza.mtl  starter.mtl  utah-teapot.mtl
Data Structure and Algorithms/Tarea02/Programa/scenes/easy/: cube.scene  sphere.scene  teapot.scene  torus.scene
Data Structure and Algorithms/Tarea02/Programa/scenes/lunatic/: dragon.scene  lucy.scene  sponza.scene
Data Structure and Algorithms/Tarea02/Programa/scenes/normal/: billiards.scene  cornellbox.scene  infinicandy.scene  metallic.scene  starters.scene
Data Structure and Algorithms/Tarea02/Programa/src/modules/: color.h  geometry.c  geometry.h  material.h  matrices.c  matrices.h  parser.c  parser.h  randoms.c  randoms.h  scene.c  scene.h  texture.c  texture.h  vectors.c  vectors.h
Data Structure and Algorithms/Tarea02/Programa/src/raytracer/: raytracer.c  renderer.c  renderer.h
Data Structure and Algorithms/Tarea02/Programa/src/solution/: geometry.h  manager.c  manager.h  scene.h  vector.h
Data Structure and Algorithms/Tarea02/Programa/src/structures_test/: structures_test.c
Data Structure and Algorithms/Tarea03/: CMakeLists.txt
Data Structure and Algorithms/Tarea03/Programa/: Makefile
Data Structure and Algorithms/Tarea03/Programa/src/helper/: multinomial.c  multinomial.h  primes.c  primes.h
Data Structure and Algorithms/Tarea03/Programa/src/seer/: seer.c
Data Structure and Algorithms/Tarea03/Programa/src/solver/: hashtable.h  lista.h  main.c  matrix.h
Data Structure and Algorithms/Tarea03/Programa/src/watcher/: watcher.c  watcher.h
Data Structure and Algorithms/Tarea03/Programa/tests/easy/: basic  limited  pebble  x
Data Structure and Algorithms/Tarea03/Programa/tests/hard/: disco  neon  sprinkle  steps
Data Structure and Algorithms/Tarea03/Programa/tests/lunatic/: candy  charmander  hanabi  stars
Data Structure and Algorithms/Tarea03/Programa/tests/normal/: checkers  crossing  flower  holy
Software Engineer/: README.md
(+84 files in other folders)
